--- a/brana_portfolio.html
+++ b/brana_portfolio.html
@@ -4,15 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BranaBuilds | Web Developer</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
+    :root {
+      --primary: #4c6ef5;
+      --secondary: #3b5bdb;
+      --bg-light: #f7f9fc;
+      --bg-dark: #1a1a2e;
+      --text-light: #ffffff;
+      --text-dark: #333333;
+    }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      background: #f7f9fc;
-      color: #333;
+      background: var(--bg-light);
+      color: var(--text-dark);
+      transition: all 0.3s ease-in-out;
+    }
+    body.dark {
+      background: var(--bg-dark);
+      color: var(--text-light);
     }
     header {
-      background: #4c6ef5;
+      background: var(--primary);
       color: white;
       padding: 2rem;
       text-align: center;
@@ -21,8 +36,9 @@
       display: flex;
       justify-content: center;
       gap: 2rem;
-      background: #3b5bdb;
+      background: var(--secondary);
       padding: 1rem;
+      flex-wrap: wrap;
     }
     nav a {
       color: white;
@@ -35,20 +51,33 @@
       margin: auto;
     }
     h2 {
-      color: #4c6ef5;
+      color: var(--primary);
     }
     .project {
       background: white;
       margin: 1rem 0;
       padding: 1rem;
-      border-left: 5px solid #4c6ef5;
+      border-left: 5px solid var(--primary);
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease;
+    }
+    .project:hover {
+      transform: scale(1.02);
+    }
+    body.dark .project {
+      background: #2e2e3a;
+      color: var(--text-light);
+    }
+    .contact-links {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
     }
     .contact-links a {
-      display: inline-block;
-      margin: 0.5rem;
+      flex: 1 1 200px;
+      text-align: center;
       padding: 0.75rem 1.5rem;
-      background: #4c6ef5;
+      background: var(--primary);
       color: white;
       text-decoration: none;
       border-radius: 5px;
@@ -59,26 +88,59 @@
       background: #e5e5e5;
       margin-top: 2rem;
     }
+    body.dark footer {
+      background: #111;
+      color: #aaa;
+    }
+    .toggle-darkmode {
+      position: fixed;
+      top: 1rem;
+      right: 1rem;
+      background: var(--primary);
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      cursor: pointer;
+      border-radius: 5px;
+      z-index: 999;
+    }
+    @media (max-width: 600px) {
+      header {
+        padding: 1.5rem 1rem;
+      }
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      section {
+        padding: 2rem 1rem;
+      }
+      .project {
+        padding: 1rem 0.75rem;
+      }
+    }
   </style>
 </head>
 <body>
-  <header>
+  <button class="toggle-darkmode">Toggle Dark Mode</button>
+
+  <header class="animate__animated animate__fadeInDown">
     <h1>BranaBuilds</h1>
     <p>Creative Web Developer • Clean, Functional & Engaging Designs</p>
   </header>
 
-  <nav>
+  <nav class="animate__animated animate__fadeIn">
     <a href="#about">About</a>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
   </nav>
 
-  <section id="about">
+  <section id="about" class="animate__animated animate__fadeInUp">
     <h2>About Me</h2>
     <p>I'm a passionate web developer focused on building responsive, modern websites that solve real-world problems. Whether it's a business site, landing page, or online store, I bring ideas to life with code and creativity.</p>
   </section>
 
-  <section id="projects">
+  <section id="projects" class="animate__animated animate__fadeInUp">
     <h2>Projects</h2>
     <div class="project">
       <h3>SmartHerb Site</h3>
@@ -94,7 +156,7 @@
     </div>
   </section>
 
-  <section id="contact">
+  <section id="contact" class="animate__animated animate__fadeInUp">
     <h2>Contact</h2>
     <p>Let’s connect! Reach out to start a project or just say hi:</p>
     <div class="contact-links">
@@ -103,8 +165,15 @@
     </div>
   </section>
 
-  <footer>
+  <footer class="animate__animated animate__fadeIn">
     <p>&copy; 2025 BranaBuilds. All rights reserved.</p>
   </footer>
+
+  <script>
+    const toggleBtn = document.querySelector('.toggle-darkmode');
+    toggleBtn.addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+    });
+  </script>
 </body>
 </html>
