--- a/brana_portfolio.html
+++ b/brana_portfolio.html
@@ -4,6 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BranaBuilds | Web Developer</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="BranaBuilds is a creative web developer portfolio featuring clean, responsive, and engaging websites." />
+  <meta name="keywords" content="web developer, portfolio, responsive design, front-end, HTML, CSS, JavaScript, websites, BranaBuilds" />
+  <meta name="author" content="BranaBuilds" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="BranaBuilds | Web Developer Portfolio" />
+  <meta property="og:description" content="Creative web development portfolio with clean and responsive website designs." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta property="og:image" content="https://yourdomain.com/thumbnail.jpg" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
     :root {
@@ -177,3 +191,4 @@
   </script>
 </body>
 </html>
+
