--- a/brana_portfolio.html
+++ b/brana_portfolio.html
@@ -15,8 +15,8 @@
   <meta property="og:title" content="BranaBuilds | Web Developer Portfolio" />
   <meta property="og:description" content="Creative web development portfolio with clean and responsive website designs." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.com" />
-  <meta property="og:image" content="https://yourdomain.com/thumbnail.jpg" />
+  <meta property="og:url" content="https://branabuilds.github.io/Branabuilds/" />
+  <meta property="og:image" content="https://branabuilds.github.io/Branabuilds/images/preview.jpg" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
@@ -174,8 +174,8 @@
     <h2>Contact</h2>
     <p>Let’s connect! Reach out to start a project or just say hi:</p>
     <div class="contact-links">
-      <a href="https://wa.me/YOURNUMBER" target="_blank">WhatsApp Me</a>
-      <a href="mailto:you@example.com">Email Me</a>
+      <a href="https://wa.me/2349026722966" target="_blank">WhatsApp Me</a>
+      <a href="mailto:davidainosi@gmail.com">Email Me</a>
     </div>
   </section>
 
@@ -191,4 +191,3 @@
   </script>
 </body>
 </html>
-
